Modificando la semantica del html

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
 
-  <section class="card">
+  <main class="card">
     <div class="container-img">
     </div>
-    <div class="container-text">
-      <h4 class="product">Perfume</h4>
+    <section class="container-text">
+      <h1 class="product">Perfume</h1>
       <h2 class="product-name" >Gabrielle Essence Eau De Parfum</h2>
       <p class="product-description">
         A floral, solar and voluptuous interpretation composed by Olivier Polge,
@@ -31,8 +31,8 @@
         <img class="button-icon" src="./images/icon-cart.svg" alt="icono carrito de compra">
         <span class="button-text">Add to Cart</span>
       </button>
-    </div>
-  </section>
+    </section>
+  </main>
   
 </body>
 </html>
